Enhance app.py with A100 optimizations, improved GPU metrics, and concurrency settings; update requirements for performance enhancements

--- a/requirements.txt
+++ b/requirements.txt
@@ -14,3 +14,7 @@ python-dotenv
 llmcompressor
 torchvision
 typing_extensions>=4.8.0
+# A100 performance optimizations
+uvloop
+httptools
+flash-attn
